fix: spacing bug

--- a/src/components/common/tabs/navbar/right.module.scss
+++ b/src/components/common/tabs/navbar/right.module.scss
@@ -12,4 +12,5 @@
 
 .panel {
   padding: 0 var(--mantine-spacing-xs);
+  padding-bottom: var(--mantine-spacing-xs);
 }
